<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/minesweeper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/minesweeper"
            android:textColor="@color/red"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/help"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/question_mark"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minesweeper"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/BestTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text= "@string/BestTime"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/minesweeper"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/LastGameTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/LastGameTime"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/BestTime"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/DifficultyLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_difficulty"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintTop_toBottomOf="@+id/LastGameTime"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <RadioGroup
            android:id="@+id/Options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/DifficultyLevel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="25dp">

            <RadioButton
                android:id="@+id/EasyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:textSize="25sp"
                android:textColor="@color/black"
                />
            <RadioButton
                android:id="@+id/MediumButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@color/black"
                android:textSize="25sp"
                />
            <RadioButton
                android:id="@+id/HardButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:textSize="25sp"
                android:textColor="@color/black"
                />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="@drawable/winbutton"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/Options"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/Or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/coustomButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/coustom_board"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/Or"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/winbutton"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>